--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,24 +14,29 @@ services:
     env_file:
       - ./.env.prod
     depends_on:
-      - db
-  db:
-    image: postgres:13
+      - postgres
+  postgres:
+    build: services/postgres
     volumes:
-      - postgres_data_prod:/var/lib/postgresql/data/
-    env_file:
-      - ./.env.prod.db
+      - ./:/tmp/db
+      - $HOME/bigdata/postgres:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=pass
+      - PGUSER=postgres
+    ports:
+      - 9999:5432
   nginx:
     build: ./services/nginx
     volumes:
       - static_volume:/home/app/web/project/static
       - media_volume:/home/app/web/project/media
     ports:
-      - 5050:80
+      - 9999:80
     depends_on:
       - web
 
 volumes:
-  postgres_data_prod:
+  postgres_prod:
   static_volume:
   media_volume:
