--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,24 @@ services:
     volumes:
       - ./services/web/:/usr/src/app/
     ports:
-      - 5050:5000
+      - 9999:5000
     env_file:
       - ./.env.dev
     depends_on:
       - db
-  db:
-    image: postgres:13
+  postgres:
+    build: services/postgres
     volumes:
-        - postgres_data:/var/lib/postgresql/data/
+      - ./:/tmp/db
+      - $HOME/bigdata/postgres:/var/lib/postgresql/data
     environment:
-        - POSTGRES_USER=hello_flask
-        - POSTGRES_PASSWORD=hello_flask
-        - POSTGRES_DB=hello_flask_dev
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=pass
+      - PGUSER=postgres
+    ports:
+      - 9999:5432
 
 volumes:
-  postgres_data:
+  postgres:
 
 
