--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,12 +5,12 @@ services:
     build:
       context: ./services/web
       dockerfile: Dockerfile.prod
-    command: gunicorn --bind 0.0.0.0:5000 manage:app
+    command: gunicorn --bind 0.0.0.0:9998 manage:app
     volumes:
       - static_volume:/home/app/web/project/static
       - media_volume:/home/app/web/project/media
     expose:
-      - 5000
+      - 9998
     env_file:
       - ./.env.prod
     depends_on:
@@ -19,7 +19,7 @@ services:
     build: services/postgres
     volumes:
       - ./:/tmp/db
-      - $HOME/bigdata/postgres:/var/lib/postgresql/data
+      - postgres_prod:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=pass
@@ -32,11 +32,12 @@ services:
       - static_volume:/home/app/web/project/static
       - media_volume:/home/app/web/project/media
     ports:
-      - 9999:80
+      - 9998:80
     depends_on:
       - web
 
 volumes:
-  postgres_prod:
+  postgres_data_prod:
   static_volume:
   media_volume:
+  postgres_prod:
