--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,16 @@ services:
     volumes:
       - ./services/web/:/usr/src/app/
     ports:
-      - 9999:5000
+      - 9998:5000
     env_file:
       - ./.env.dev
     depends_on:
-      - db
+      - postgres
   postgres:
     build: services/postgres
     volumes:
       - ./:/tmp/db
-      - $HOME/bigdata/postgres:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=pass
