--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,11 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: setup python
     - name: docker
       run: |
+        git submodule init
+        git submodule update
+
+        # run the database in docker container
         docker-compose up -d --build
+
+        # verify that it is running successfully
+        # this is an idempotent command useful for debugging
         docker ps -a
-        sleep 20
-        ./load_tweets_sequential.sh
-        docker-compose exec -T pg_normalized ./run_tests.sh
